[tool.poetry]
name = "audio-quill"
version = "0.1.0"
description = "Transcribe audio files and generate markdown files with titles using Whisper and OpenAI."
authors = ["David Nix"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
whisper = "^1.0"
openai = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
